@@ -317,7 +317,12 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP5000 (EXPERIMENTAL)
        Canon PIXMA iP4100 (EXPERIMENTAL)
        Canon PIXMA i80    (EXPERIMENTAL)
-       Canon PIXMA i850   (EXPERIMENTAL)
+       Canon PIXMA i850   (EXPERIMENTAL) *1
+       Canon PIXMA i860   (EXPERIMENTAL) *1
+
+       *1: for compatibility, the changed printers are named with
+        "new" appended. The old printers will be deprecated in a
+        future release.
 
 * Changes from 5.2.6
 
